after running make

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(get_bucketname,s3_object)
 S3method(print,aws_error)
 S3method(print,s3_bucket)
 S3method(print,s3_object)
+export(TODO)
 export(bucket_exists)
 export(bucket_list_df)
 export(bucketexists)
@@ -26,6 +27,8 @@ export(delete_tagging)
 export(delete_website)
 export(deletebucket)
 export(deleteobject)
+export(documenting)
+export(finish)
 export(get_acceleration)
 export(get_acl)
 export(get_bucket)
@@ -62,6 +65,7 @@ export(put_folder)
 export(put_lifecycle)
 export(put_notification)
 export(put_object)
+export(put_object_tagging)
 export(put_replication)
 export(put_requestpayment)
 export(put_tagging)
