get object tagging functions working

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,6 @@ S3method(get_bucketname,s3_object)
 S3method(print,aws_error)
 S3method(print,s3_bucket)
 S3method(print,s3_object)
-export(TODO)
 export(bucket_exists)
 export(bucket_list_df)
 export(bucketexists)
@@ -22,13 +21,12 @@ export(delete_cors)
 export(delete_encryption)
 export(delete_lifecycle)
 export(delete_object)
+export(delete_object_tagging)
 export(delete_replication)
 export(delete_tagging)
 export(delete_website)
 export(deletebucket)
 export(deleteobject)
-export(documenting)
-export(finish)
 export(get_acceleration)
 export(get_acl)
 export(get_bucket)
@@ -41,6 +39,7 @@ export(get_lifecycle)
 export(get_location)
 export(get_notification)
 export(get_object)
+export(get_object_tagging)
 export(get_replication)
 export(get_requestpayment)
 export(get_tagging)
